[gd_scene load_steps=8 format=4 uid="uid://dbvxpxv3fg03q"]

[ext_resource type="TileSet" uid="uid://dulhu4nsq70uv" path="res://Maps/DungeonTileset.tres" id="1_p7vvt"]
[ext_resource type="Script" uid="uid://dir7iaigxtvar" path="res://Maps/Tutorial.gd" id="1_vqqba"]
[ext_resource type="PackedScene" uid="uid://vswgrotid75j" path="res://HUDs/DialogueHUD.tscn" id="3_p0mxm"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_vqqba"]
vertices = PackedVector2Array(758, -870, 758, -570, 550, -570, 234, -870, 550, 102, 26, 102, 26, 26, 442, 26, 442, -570, 234, -570)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 6, 7), PackedInt32Array(2, 4, 7, 8), PackedInt32Array(3, 2, 8), PackedInt32Array(3, 8, 9)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1, -1, 416, 0, 416, -544, 208, -544, 208, -896, 784, -896, 784, -544, 576, -544, 576, 128, 0, 128)])

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vqqba"]
b = Vector2(0, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65mjx"]
size = Vector2(144, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqqba"]
size = Vector2(144, 100)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_vqqba")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_vqqba")
navigation_layers = 2

[node name="TileMapLayer" type="TileMapLayer" parent="NavigationRegion2D"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAACAAAAAAACAAAAAAACAAAAAAADAAAAAAAEAAAAAAAEAAAAAAACAAAAAAAFAAAAAAABAAAAAAAGAAAAAAABAAAAAAAHAAAAAAACAAAAAAAIAAAAAAADAAAAAAAJAAAAAAAEAAAAAAAKAAAAAAACAAAAAAALAAAAAAAEAAAAAAAMAAAAAAACAAAAAAANAAAAAAAEAAAAAAAOAAAAAAACAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAQAAAAGAAUAAAAGAAIAAAAGAAQAAAAIAAEAAAAGAAMAAAAIAAAAAAAGAAIAAAAGAAAAAAAGAAEAAAAGAAIAAAAFAAEAAAAJAAAAAAAEAAEAAAAGAAEAAAADAAEAAAAJAAEAAAACAAEAAAAGAAEAAAABAAEAAAAHAAIAAAABAAIAAAAJAAEAAAABAAMAAAAJAAEAAAABAAQAAAAHAAEAAAABAAUAAAAGAAIAAAABAAYAAAAJAAIAAAABAAcAAAADAAQAAAACAAcAAAAEAAQAAAACAAYAAAAHAAEAAAACAAUAAAAHAAEAAAACAAQAAAAIAAIAAAACAAMAAAAJAAAAAAACAAIAAAAIAAIAAAADAAIAAAAHAAAAAAADAAMAAAAJAAAAAAADAAQAAAAIAAIAAAADAAUAAAAJAAEAAAADAAYAAAAIAAEAAAADAAcAAAAEAAQAAAAEAAcAAAACAAQAAAAEAAYAAAAGAAAAAAAEAAUAAAAHAAIAAAAEAAQAAAAIAAIAAAAEAAMAAAAJAAAAAAAEAAIAAAAIAAEAAAAFAAIAAAAJAAIAAAAFAAMAAAAGAAEAAAAFAAQAAAAHAAIAAAAFAAUAAAAHAAEAAAAFAAYAAAAGAAEAAAAFAAcAAAACAAQAAAAGAAcAAAACAAQAAAAGAAYAAAAHAAEAAAAHAAYAAAAIAAAAAAAHAAUAAAAIAAAAAAAHAAQAAAAJAAIAAAAHAAMAAAAHAAAAAAAHAAIAAAAJAAAAAAAHAAEAAAAHAAEAAAAIAAEAAAAJAAIAAAAIAAIAAAAHAAIAAAAIAAMAAAAIAAEAAAAIAAQAAAAHAAIAAAAIAAUAAAAJAAIAAAAIAAYAAAAJAAAAAAAIAAcAAAACAAQAAAAHAAcAAAAEAAQAAAAJAAcAAAACAAQAAAAJAAYAAAAIAAEAAAAJAAUAAAAGAAAAAAAJAAQAAAAJAAAAAAAJAAMAAAAGAAIAAAAJAAIAAAAHAAIAAAAJAAEAAAAGAAIAAAAKAAEAAAAJAAEAAAAKAAIAAAAIAAAAAAAKAAMAAAAIAAAAAAAKAAQAAAAIAAIAAAAKAAUAAAAHAAAAAAAKAAYAAAAGAAIAAAAKAAcAAAAEAAQAAAALAAcAAAAEAAQAAAALAAYAAAAGAAEAAAALAAUAAAAGAAAAAAALAAQAAAAGAAIAAAALAAMAAAAHAAIAAAALAAIAAAAGAAEAAAALAAEAAAAJAAAAAAAMAAEAAAAHAAEAAAAMAAIAAAAJAAAAAAAMAAMAAAAIAAEAAAAMAAQAAAAHAAAAAAAMAAUAAAAIAAEAAAAMAAYAAAAIAAEAAAAMAAcAAAADAAQAAAANAAcAAAACAAQAAAANAAYAAAAIAAAAAAANAAUAAAAIAAIAAAANAAQAAAAHAAEAAAANAAMAAAAJAAEAAAANAAIAAAAHAAIAAAANAAEAAAAHAAEAAAAOAAEAAAAJAAEAAAAOAAIAAAAHAAAAAAAOAAMAAAAIAAIAAAAOAAQAAAAIAAAAAAAOAAUAAAAHAAEAAAAOAAYAAAAIAAAAAAAOAAcAAAABAAQAAAAPAAAAAAABAAAAAAAQAAAAAAACAAAAAAARAAAAAAADAAAAAAASAAAAAAABAAAAAAATAAAAAAAEAAAAAAAPAAcAAAABAAQAAAAQAAcAAAAEAAQAAAARAAcAAAADAAQAAAASAAcAAAACAAQAAAATAAcAAAABAAQAAAAUAAcAAAAEAAQAAAAVAAcAAAAEAAQAAAAWAAcAAAABAAQAAAAXAAcAAAABAAQAAAAYAAcAAAADAAQAAAAZAAcAAAADAAQAAAAaAAcAAAAEAAQAAAAbAAcAAAADAAQAAAAUAAQAAAAIAAIAAAAUAAMAAAAGAAIAAAAUAAIAAAAHAAIAAAAUAAEAAAAHAAEAAAAUAAAAAAACAAAAAAAVAAAAAAADAAAAAAAVAAEAAAAIAAAAAAAVAAIAAAAJAAEAAAAVAAMAAAAIAAEAAAAVAAQAAAAGAAIAAAAVAAUAAAAJAAAAAAAUAAUAAAAIAAEAAAATAAUAAAAGAAEAAAATAAQAAAAIAAEAAAATAAMAAAAJAAIAAAATAAIAAAAIAAAAAAATAAEAAAAHAAIAAAASAAEAAAAHAAAAAAARAAEAAAAHAAEAAAAQAAEAAAAHAAAAAAAPAAEAAAAHAAAAAAAPAAIAAAAIAAEAAAAPAAMAAAAJAAIAAAAPAAQAAAAGAAAAAAAPAAUAAAAIAAAAAAAPAAYAAAAJAAIAAAAQAAYAAAAGAAEAAAAQAAUAAAAJAAIAAAAQAAQAAAAIAAIAAAAQAAMAAAAHAAIAAAAQAAIAAAAGAAAAAAARAAIAAAAGAAAAAAARAAMAAAAGAAAAAAARAAQAAAAJAAIAAAARAAUAAAAIAAEAAAARAAYAAAAIAAAAAAASAAYAAAAGAAEAAAASAAUAAAAGAAIAAAASAAQAAAAHAAEAAAASAAMAAAAGAAIAAAASAAIAAAAIAAIAAAATAAYAAAAJAAAAAAAUAAYAAAAGAAIAAAAVAAYAAAAIAAEAAAAWAAYAAAAHAAIAAAAWAAUAAAAHAAAAAAAWAAQAAAAJAAEAAAAWAAMAAAAGAAEAAAAWAAIAAAAJAAEAAAAWAAEAAAAGAAEAAAAWAAAAAAABAAAAAAAXAAAAAAABAAAAAAAXAAEAAAAIAAIAAAAXAAIAAAAJAAIAAAAXAAMAAAAHAAAAAAAXAAQAAAAIAAIAAAAXAAUAAAAIAAEAAAAXAAYAAAAJAAIAAAAYAAYAAAAIAAEAAAAYAAUAAAAGAAEAAAAYAAQAAAAHAAAAAAAYAAMAAAAIAAEAAAAYAAIAAAAJAAIAAAAYAAEAAAAGAAEAAAAYAAAAAAACAAAAAAAZAAAAAAADAAAAAAAZAAEAAAAGAAEAAAAZAAIAAAAGAAAAAAAZAAMAAAAJAAAAAAAZAAQAAAAGAAIAAAAZAAUAAAAIAAEAAAAZAAYAAAAGAAEAAAAaAAYAAAAIAAAAAAAaAAUAAAAIAAIAAAAaAAQAAAAHAAEAAAAaAAMAAAAIAAIAAAAaAAIAAAAHAAEAAAAaAAEAAAAIAAEAAAAaAAAAAAACAAAAAAAcAAcAAAABAAQAAAAdAAcAAAAEAAQAAAAeAAcAAAADAAQAAAAfAAcAAAABAAQAAAAgAAcAAAABAAQAAAAhAAcAAAABAAQAAAAiAAcAAAACAAQAAAAjAAcAAAAFAAQAAAAjAAYAAAAFAAAAAAAjAAUAAAAFAAAAAAAjAAQAAAAFAAIAAAAjAAMAAAAFAAAAAAAjAAIAAAAFAAMAAAAjAAEAAAAFAAMAAAAjAAAAAAAFAAAAAAAaAP//AAAAAAMAAAAaAP7/AAAAAAAAAAAaAP3/AAAAAAIAAAAaAPz/AAAAAAMAAAAeAAMAAAAHAAEAAAAeAAIAAAAJAAEAAAAeAAEAAAAJAAEAAAAeAAAAAAAJAAEAAAAeAP//AAAJAAIAAAAeAP7/AAAHAAAAAAAeAP3/AAAIAAAAAAAeAPz/AAAHAAIAAAAdAPz/AAAGAAIAAAAcAPz/AAAGAAAAAAAbAPz/AAAGAAEAAAAbAP3/AAAIAAIAAAAbAP7/AAAIAAIAAAAbAP//AAAIAAEAAAAbAAAAAAAJAAEAAAAbAAEAAAAIAAIAAAAbAAIAAAAHAAAAAAAbAAMAAAAHAAEAAAAbAAQAAAAJAAEAAAAbAAUAAAAHAAEAAAAbAAYAAAAJAAEAAAAcAAYAAAAGAAAAAAAcAAUAAAAJAAIAAAAcAAQAAAAIAAEAAAAcAAMAAAAJAAIAAAAcAAIAAAAGAAEAAAAcAAEAAAAIAAIAAAAcAAAAAAAJAAEAAAAcAP//AAAJAAAAAAAcAP7/AAAGAAIAAAAcAP3/AAAGAAIAAAAdAP3/AAAHAAAAAAAdAP7/AAAJAAIAAAAdAP//AAAGAAIAAAAdAAAAAAAJAAIAAAAdAAEAAAAHAAAAAAAdAAIAAAAHAAEAAAAdAAMAAAAGAAIAAAAdAAQAAAAIAAAAAAAdAAUAAAAJAAIAAAAdAAYAAAAIAAIAAAAeAAYAAAAGAAAAAAAeAAUAAAAIAAAAAAAeAAQAAAAJAAAAAAAfAAQAAAAGAAAAAAAfAAMAAAAJAAEAAAAfAAIAAAAJAAEAAAAfAAEAAAAIAAEAAAAfAAAAAAAJAAAAAAAfAP//AAAJAAIAAAAfAP7/AAAHAAAAAAAfAP3/AAAHAAEAAAAfAPz/AAAHAAAAAAAgAPz/AAAJAAAAAAAgAP3/AAAIAAIAAAAgAP7/AAAHAAAAAAAgAP//AAAIAAIAAAAgAAAAAAAIAAAAAAAgAAEAAAAGAAIAAAAgAAIAAAAHAAAAAAAgAAMAAAAGAAEAAAAgAAQAAAAJAAAAAAAgAAUAAAAHAAEAAAAfAAUAAAAHAAAAAAAfAAYAAAAGAAIAAAAgAAYAAAAHAAAAAAAhAAYAAAAIAAAAAAAhAAUAAAAHAAIAAAAhAAQAAAAIAAIAAAAhAAMAAAAGAAAAAAAhAAIAAAAHAAIAAAAhAAEAAAAJAAAAAAAhAAAAAAAGAAEAAAAhAP//AAAJAAIAAAAhAP7/AAAGAAIAAAAhAP3/AAAHAAEAAAAhAPz/AAAIAAAAAAAiAPz/AAAJAAAAAAAiAP3/AAAJAAIAAAAiAP7/AAAIAAAAAAAiAP//AAAIAAAAAAAiAAAAAAAJAAIAAAAiAAEAAAAIAAIAAAAiAAIAAAAIAAIAAAAiAAMAAAAGAAEAAAAiAAQAAAAGAAAAAAAiAAUAAAAGAAAAAAAiAAYAAAAGAAEAAAAjAP//AAAFAAEAAAAjAP7/AAAFAAAAAAAjAP3/AAAFAAEAAAAjAPz/AAAFAAEAAAAaAPv/AAAAAAIAAAAaAPr/AAAAAAAAAAAaAPn/AAAAAAIAAAAaAPj/AAAAAAMAAAAaAPf/AAAAAAEAAAAaAPb/AAAAAAMAAAAaAPX/AAAAAAIAAAAaAPT/AAAAAAIAAAAaAPP/AAAAAAIAAAAaAPL/AAAAAAEAAAAaAPH/AAAAAAAAAAAaAPD/AAAAAAIAAAAaAO//AAAAAAIAAAAaAO7/AAAAAAIAAAAaAO3/AAAAAAAAAAAaAOz/AAAAAAIAAAAaAOv/AAAAAAAAAAAaAOr/AAAAAAAAAAAaAOn/AAAAAAIAAAAaAOj/AAAAAAAAAAAaAOf/AAAAAAEAAAAaAOb/AAAAAAAAAAAaAOX/AAAAAAMAAAAaAOT/AAAAAAIAAAAaAOP/AAAAAAEAAAAaAOL/AAAAAAAAAAAaAOH/AAAAAAAAAAAaAOD/AAAAAAIAAAAaAN//AAAAAAMAAAAaAN7/AAAAAAIAAAAaAN3/AAADAAUAAAAjAPv/AAAFAAEAAAAjAPr/AAAFAAMAAAAjAPn/AAAFAAMAAAAjAPj/AAAFAAEAAAAjAPf/AAAFAAAAAAAjAPb/AAAFAAAAAAAjAPX/AAAFAAIAAAAjAPT/AAAFAAEAAAAjAPP/AAAFAAEAAAAjAPL/AAAFAAMAAAAjAPH/AAAFAAAAAAAjAPD/AAAFAAEAAAAjAO//AAAFAAEAAAAjAO7/AAAFAAIAAAAjAO3/AAAFAAEAAAAjAOz/AAAFAAAAAAAjAOv/AAAFAAAAAAAjAOr/AAAFAAEAAAAjAOn/AAAFAAIAAAAjAOj/AAAFAAMAAAAjAOf/AAAFAAEAAAAjAOb/AAAFAAMAAAAjAOX/AAAFAAIAAAAjAOT/AAAFAAMAAAAjAOP/AAAFAAMAAAAjAOL/AAAFAAEAAAAjAOH/AAAFAAMAAAAjAOD/AAAFAAIAAAAjAN//AAAFAAIAAAAjAN7/AAAFAAIAAAAjAN3/AAAEAAUAAAAgAPX/AAAGAAAAAAAgAPT/AAAGAAAAAAAgAPP/AAAHAAIAAAAgAPL/AAAIAAEAAAAgAPH/AAAJAAAAAAAgAPD/AAAHAAEAAAAgAO//AAAJAAIAAAAgAO7/AAAJAAAAAAAgAO3/AAAIAAIAAAAgAOz/AAAHAAIAAAAgAOv/AAAJAAIAAAAgAOr/AAAJAAEAAAAgAOn/AAAHAAAAAAAgAOj/AAAGAAAAAAAgAOf/AAAJAAIAAAAgAOb/AAAJAAIAAAAgAOX/AAAIAAAAAAAgAOT/AAAHAAIAAAAgAOP/AAAIAAAAAAAgAOL/AAAJAAAAAAAgAOH/AAAIAAAAAAAgAOD/AAAJAAIAAAAgAN//AAAJAAEAAAAgAN7/AAAHAAEAAAAgAN3/AAAJAAAAAAAfAN3/AAAJAAAAAAAeAN3/AAAGAAIAAAAdAN3/AAAHAAEAAAAcAN3/AAAGAAEAAAAbAN3/AAAGAAEAAAAbAN7/AAAIAAAAAAAbAN//AAAGAAIAAAAbAOD/AAAJAAEAAAAbAOH/AAAHAAIAAAAbAOL/AAAGAAEAAAAbAOP/AAAGAAAAAAAbAOT/AAAHAAIAAAAbAOX/AAAJAAIAAAAbAOb/AAAHAAEAAAAbAOf/AAAHAAAAAAAbAOj/AAAHAAIAAAAbAOn/AAAIAAEAAAAbAOr/AAAHAAIAAAAbAOv/AAAGAAAAAAAbAOz/AAAJAAAAAAAbAO3/AAAHAAAAAAAbAO7/AAAIAAAAAAAbAO//AAAJAAEAAAAbAPD/AAAHAAAAAAAbAPH/AAAIAAIAAAAbAPL/AAAJAAEAAAAbAPP/AAAJAAEAAAAbAPT/AAAHAAIAAAAbAPX/AAAGAAIAAAAbAPb/AAAJAAAAAAAbAPf/AAAJAAEAAAAbAPj/AAAGAAAAAAAbAPn/AAAGAAIAAAAbAPr/AAAIAAAAAAAbAPv/AAAJAAAAAAAcAPv/AAAIAAAAAAAcAPr/AAAJAAIAAAAcAPn/AAAIAAAAAAAcAPj/AAAIAAAAAAAcAPf/AAAJAAEAAAAcAPb/AAAIAAIAAAAcAPX/AAAHAAAAAAAcAPT/AAAJAAAAAAAcAPP/AAAIAAEAAAAcAPL/AAAHAAAAAAAcAPH/AAAIAAIAAAAcAPD/AAAHAAAAAAAcAO//AAAJAAAAAAAcAO7/AAAGAAAAAAAcAO3/AAAJAAEAAAAcAOz/AAAGAAAAAAAcAOv/AAAJAAEAAAAcAOr/AAAJAAAAAAAcAOn/AAAJAAAAAAAcAOj/AAAHAAIAAAAcAOf/AAAJAAEAAAAcAOb/AAAGAAIAAAAcAOX/AAAJAAEAAAAcAOT/AAAIAAAAAAAcAOP/AAAGAAAAAAAcAOL/AAAHAAEAAAAcAOH/AAAIAAEAAAAcAOD/AAAJAAIAAAAcAN//AAAGAAIAAAAcAN7/AAAIAAIAAAAdAN7/AAAJAAAAAAAdAN//AAAIAAAAAAAdAOD/AAAIAAIAAAAdAOH/AAAIAAAAAAAdAOL/AAAJAAIAAAAdAOP/AAAIAAAAAAAdAOT/AAAHAAAAAAAdAOX/AAAHAAIAAAAdAOb/AAAJAAIAAAAdAOf/AAAJAAIAAAAdAOj/AAAIAAAAAAAdAOn/AAAJAAIAAAAdAOr/AAAIAAIAAAAdAOv/AAAGAAIAAAAdAOz/AAAGAAAAAAAdAO3/AAAGAAIAAAAdAO7/AAAJAAEAAAAdAO//AAAIAAIAAAAdAPD/AAAJAAAAAAAdAPH/AAAJAAEAAAAdAPL/AAAJAAEAAAAdAPP/AAAJAAEAAAAdAPT/AAAIAAAAAAAdAPX/AAAGAAEAAAAdAPb/AAAIAAAAAAAdAPf/AAAHAAEAAAAdAPj/AAAIAAIAAAAdAPn/AAAHAAAAAAAdAPr/AAAIAAAAAAAdAPv/AAAHAAAAAAAeAPv/AAAHAAIAAAAeAPr/AAAJAAIAAAAeAPn/AAAJAAEAAAAeAPj/AAAIAAAAAAAeAPf/AAAGAAEAAAAeAPb/AAAGAAAAAAAeAPX/AAAHAAEAAAAeAPT/AAAJAAAAAAAeAPP/AAAHAAAAAAAeAPL/AAAJAAEAAAAeAPH/AAAGAAAAAAAeAPD/AAAGAAIAAAAeAO//AAAIAAEAAAAeAO7/AAAGAAEAAAAeAO3/AAAIAAAAAAAeAOz/AAAIAAIAAAAeAOv/AAAGAAEAAAAeAOr/AAAHAAIAAAAeAOn/AAAJAAAAAAAeAOj/AAAJAAEAAAAeAOf/AAAIAAAAAAAeAOb/AAAGAAIAAAAeAOX/AAAIAAIAAAAeAOT/AAAGAAIAAAAeAOP/AAAIAAAAAAAeAOL/AAAHAAIAAAAeAOH/AAAJAAEAAAAeAOD/AAAGAAAAAAAeAN//AAAJAAIAAAAeAN7/AAAGAAEAAAAfAN7/AAAJAAAAAAAfAN//AAAJAAIAAAAfAOD/AAAJAAAAAAAfAOH/AAAJAAEAAAAfAOL/AAAJAAAAAAAfAOP/AAAJAAIAAAAfAOT/AAAJAAIAAAAfAOX/AAAIAAAAAAAfAOb/AAAGAAEAAAAfAOf/AAAJAAIAAAAfAOj/AAAHAAIAAAAfAOn/AAAJAAIAAAAfAOr/AAAGAAIAAAAfAOv/AAAHAAIAAAAfAOz/AAAIAAAAAAAfAO3/AAAJAAIAAAAfAO7/AAAJAAEAAAAfAO//AAAJAAIAAAAfAPD/AAAJAAIAAAAfAPH/AAAIAAEAAAAfAPL/AAAIAAAAAAAfAPP/AAAJAAEAAAAfAPT/AAAJAAEAAAAfAPX/AAAIAAEAAAAfAPb/AAAGAAIAAAAfAPf/AAAHAAAAAAAfAPj/AAAIAAIAAAAfAPn/AAAJAAEAAAAfAPr/AAAIAAAAAAAfAPv/AAAIAAIAAAAgAPv/AAAIAAAAAAAgAPr/AAAHAAEAAAAgAPn/AAAGAAEAAAAgAPj/AAAGAAIAAAAgAPf/AAAGAAAAAAAgAPb/AAAIAAAAAAAhAPb/AAAIAAAAAAAhAPX/AAAHAAEAAAAhAPT/AAAJAAIAAAAhAPP/AAAGAAIAAAAhAPL/AAAHAAAAAAAhAPH/AAAIAAEAAAAhAPD/AAAHAAEAAAAhAO//AAAIAAAAAAAhAO7/AAAJAAEAAAAhAO3/AAAGAAEAAAAhAOz/AAAHAAEAAAAhAOv/AAAGAAIAAAAhAOr/AAAGAAAAAAAhAOn/AAAHAAIAAAAhAOj/AAAJAAEAAAAhAOf/AAAJAAAAAAAhAOb/AAAGAAEAAAAhAOX/AAAIAAIAAAAhAOT/AAAGAAAAAAAhAOP/AAAGAAIAAAAhAOL/AAAGAAAAAAAhAOH/AAAJAAAAAAAhAOD/AAAIAAEAAAAhAN//AAAJAAIAAAAhAN7/AAAHAAIAAAAhAN3/AAAJAAAAAAAiAN3/AAAJAAAAAAAiAN7/AAAHAAEAAAAiAN//AAAHAAEAAAAiAOD/AAAJAAEAAAAiAOH/AAAGAAEAAAAiAOL/AAAJAAEAAAAiAOP/AAAJAAIAAAAiAOT/AAAGAAAAAAAiAOX/AAAJAAIAAAAiAOb/AAAHAAEAAAAiAOf/AAAHAAIAAAAiAOj/AAAJAAEAAAAiAOn/AAAHAAAAAAAiAOr/AAAHAAIAAAAiAOv/AAAJAAAAAAAiAOz/AAAHAAAAAAAiAO3/AAAHAAEAAAAiAO7/AAAHAAIAAAAiAO//AAAJAAEAAAAiAPD/AAAJAAIAAAAiAPH/AAAHAAEAAAAiAPL/AAAHAAEAAAAiAPP/AAAGAAIAAAAiAPT/AAAIAAAAAAAiAPX/AAAGAAAAAAAiAPb/AAAGAAEAAAAiAPf/AAAJAAAAAAAhAPf/AAAGAAEAAAAhAPj/AAAIAAIAAAAhAPn/AAAHAAEAAAAhAPr/AAAHAAEAAAAhAPv/AAAIAAAAAAAiAPv/AAAJAAIAAAAiAPr/AAAJAAAAAAAiAPn/AAAHAAAAAAAiAPj/AAAGAAAAAAAkAN3/AAACAAQAAAAlAN3/AAABAAQAAAAmAN3/AAABAAQAAAAnAN3/AAAEAAQAAAAoAN3/AAADAAQAAAApAN3/AAADAAQAAAAqAN3/AAAEAAQAAAArAN3/AAABAAQAAAAsAN3/AAADAAQAAAAtAN3/AAABAAQAAAAuAN3/AAACAAQAAAAvAN3/AAAEAAQAAAAZAN3/AAAEAAQAAAAYAN3/AAABAAQAAAAXAN3/AAACAAQAAAAWAN3/AAAEAAQAAAAVAN3/AAACAAQAAAAUAN3/AAABAAQAAAATAN3/AAACAAQAAAASAN3/AAACAAQAAAARAN3/AAABAAQAAAAQAN3/AAAEAAQAAAAPAN3/AAADAAQAAAAOAN3/AAABAAQAAAANAN3/AAAAAAQAAAAwAN3/AAAFAAQAAAAwANz/AAAFAAIAAAAwANv/AAAFAAIAAAAwANr/AAAFAAAAAAAwANn/AAAFAAIAAAAwANj/AAAFAAIAAAAwANf/AAAFAAAAAAAwANb/AAAFAAEAAAAwANX/AAAFAAMAAAAwANT/AAAFAAEAAAAwANP/AAAFAAIAAAAwANL/AAAFAAIAAAAwANH/AAAFAAEAAAAwAND/AAAFAAIAAAAwAM//AAAFAAIAAAAwAM7/AAAFAAIAAAAwAM3/AAAFAAAAAAAwAMz/AAAFAAIAAAAwAMv/AAAFAAEAAAAwAMr/AAAFAAMAAAAwAMn/AAAFAAMAAAAwAMj/AAAFAAMAAAANANz/AAAAAAAAAAANANv/AAAAAAMAAAANANr/AAAAAAMAAAANANn/AAAAAAMAAAANANj/AAAAAAIAAAANANf/AAAAAAIAAAANANb/AAAAAAEAAAANANX/AAAAAAMAAAANANT/AAAAAAAAAAANANP/AAAAAAAAAAANANL/AAAAAAAAAAANANH/AAAAAAIAAAANAND/AAAAAAIAAAANAM//AAAAAAEAAAANAM7/AAAAAAAAAAANAM3/AAAAAAIAAAANAMz/AAAAAAIAAAANAMv/AAAAAAEAAAANAMr/AAAAAAMAAAANAMn/AAAAAAMAAAANAMj/AAAAAAAAAAAvAMj/AAACAAAAAAAuAMj/AAAEAAAAAAAtAMj/AAACAAAAAAAsAMj/AAACAAAAAAArAMj/AAACAAAAAAAqAMj/AAACAAAAAAApAMj/AAABAAAAAAAoAMj/AAABAAAAAAAnAMj/AAABAAAAAAAmAMj/AAACAAAAAAAlAMj/AAACAAAAAAAkAMj/AAACAAAAAAAjAMj/AAADAAAAAAAiAMj/AAACAAAAAAAhAMj/AAABAAAAAAAgAMj/AAADAAAAAAAfAMj/AAABAAAAAAAeAMj/AAABAAAAAAAdAMj/AAACAAAAAAAcAMj/AAAEAAAAAAAbAMj/AAADAAAAAAAaAMj/AAABAAAAAAAZAMj/AAADAAAAAAAYAMj/AAABAAAAAAAXAMj/AAABAAAAAAAWAMj/AAABAAAAAAAVAMj/AAABAAAAAAAUAMj/AAAEAAAAAAATAMj/AAABAAAAAAASAMj/AAABAAAAAAARAMj/AAABAAAAAAAQAMj/AAABAAAAAAAPAMj/AAABAAAAAAAOAMj/AAACAAAAAAAdANT/AAAGAAEAAAAdANP/AAAGAAIAAAAdANL/AAAIAAEAAAAdANH/AAAHAAAAAAAdAND/AAAHAAAAAAAdAM//AAAGAAEAAAAdAM7/AAAIAAEAAAAdAM3/AAAGAAIAAAAdAMz/AAAIAAEAAAAdAMv/AAAGAAAAAAAdAMr/AAAIAAEAAAAdAMn/AAAJAAEAAAAcAMn/AAAGAAEAAAAbAMn/AAAGAAEAAAAaAMn/AAAIAAEAAAAZAMn/AAAGAAIAAAAYAMn/AAAHAAEAAAAXAMn/AAAGAAAAAAAWAMn/AAAIAAAAAAAVAMn/AAAHAAEAAAAUAMn/AAAGAAEAAAATAMn/AAAHAAEAAAASAMn/AAAHAAIAAAARAMn/AAAGAAAAAAAQAMn/AAAGAAEAAAAPAMn/AAAGAAEAAAAOAMn/AAAIAAEAAAAOAMr/AAAJAAEAAAAOAMv/AAAHAAAAAAAOAMz/AAAJAAAAAAAOAM3/AAAGAAIAAAAOAM7/AAAIAAIAAAAOAM//AAAIAAEAAAAOAND/AAAHAAIAAAAOANH/AAAHAAEAAAAOANL/AAAJAAIAAAAOANP/AAAHAAIAAAAOANT/AAAHAAEAAAAOANX/AAAJAAIAAAAOANb/AAAJAAIAAAAOANf/AAAJAAEAAAAOANj/AAAHAAEAAAAOANn/AAAHAAIAAAAOANr/AAAGAAEAAAAOANv/AAAIAAEAAAAOANz/AAAHAAIAAAAPANz/AAAJAAAAAAAPANv/AAAIAAAAAAAPANr/AAAIAAIAAAAPANn/AAAJAAAAAAAPANj/AAAIAAIAAAAPANf/AAAIAAEAAAAPANb/AAAIAAEAAAAPANX/AAAHAAAAAAAPANT/AAAIAAIAAAAPANP/AAAGAAEAAAAPANL/AAAJAAEAAAAPANH/AAAJAAEAAAAPAND/AAAHAAIAAAAPAM//AAAJAAEAAAAPAM7/AAAIAAAAAAAPAM3/AAAHAAAAAAAPAMz/AAAJAAIAAAAPAMv/AAAJAAEAAAAPAMr/AAAIAAIAAAAQAMr/AAAJAAEAAAAQAMv/AAAGAAEAAAAQAMz/AAAGAAIAAAAQAM3/AAAGAAEAAAAQAM7/AAAGAAIAAAAQAM//AAAGAAAAAAAQAND/AAAHAAIAAAAQANH/AAAIAAAAAAAQANL/AAAHAAIAAAAQANP/AAAGAAAAAAAQANT/AAAHAAAAAAAQANX/AAAIAAEAAAAQANb/AAAIAAEAAAAQANf/AAAJAAEAAAAQANj/AAAHAAIAAAAQANn/AAAGAAIAAAAQANr/AAAGAAEAAAAQANv/AAAHAAIAAAAQANz/AAAIAAEAAAARANz/AAAIAAIAAAARANv/AAAHAAIAAAARANr/AAAIAAIAAAARANn/AAAIAAIAAAARANj/AAAIAAEAAAARANf/AAAJAAEAAAARANb/AAAJAAEAAAARANX/AAAIAAAAAAARANT/AAAGAAIAAAARANP/AAAIAAIAAAARANL/AAAHAAAAAAARANH/AAAIAAAAAAARAND/AAAGAAEAAAARAM//AAAGAAIAAAARAM7/AAAHAAIAAAARAM3/AAAHAAEAAAARAMz/AAAIAAAAAAARAMv/AAAJAAAAAAARAMr/AAAJAAIAAAASAMr/AAAHAAEAAAASAMv/AAAJAAEAAAASAMz/AAAGAAIAAAASAM3/AAAGAAEAAAASAM7/AAAGAAAAAAASAM//AAAJAAAAAAASAND/AAAIAAIAAAASANH/AAAHAAEAAAASANL/AAAIAAIAAAASANP/AAAHAAEAAAASANT/AAAHAAEAAAASANX/AAAJAAEAAAASANb/AAAIAAEAAAASANf/AAAGAAAAAAASANj/AAAGAAIAAAASANn/AAAJAAIAAAASANr/AAAIAAIAAAASANv/AAAJAAAAAAASANz/AAAHAAIAAAATANz/AAAJAAEAAAATANv/AAAIAAEAAAATANr/AAAGAAEAAAATANn/AAAIAAEAAAATANj/AAAJAAIAAAATANf/AAAHAAEAAAATANb/AAAJAAIAAAATANX/AAAHAAEAAAATANT/AAAIAAAAAAATANP/AAAIAAIAAAATANL/AAAHAAAAAAATANH/AAAHAAEAAAATAND/AAAIAAAAAAATAM//AAAJAAEAAAATAM7/AAAGAAIAAAATAM3/AAAJAAEAAAATAMz/AAAGAAIAAAATAMv/AAAIAAIAAAATAMr/AAAHAAAAAAAUAMr/AAAIAAAAAAAUAMv/AAAGAAAAAAAUAMz/AAAGAAIAAAAUAM3/AAAHAAIAAAAUAM7/AAAJAAEAAAAUAM//AAAHAAEAAAAUAND/AAAGAAAAAAAUANH/AAAHAAIAAAAUANL/AAAHAAEAAAAUANP/AAAIAAEAAAAUANT/AAAIAAAAAAAUANX/AAAHAAIAAAAUANb/AAAHAAEAAAAUANf/AAAHAAIAAAAUANj/AAAHAAAAAAAUANn/AAAGAAEAAAAUANr/AAAJAAAAAAAUANv/AAAIAAAAAAAUANz/AAAJAAEAAAAVANz/AAAHAAIAAAAVANv/AAAGAAIAAAAVANr/AAAGAAIAAAAVANn/AAAJAAEAAAAVANj/AAAJAAIAAAAVANf/AAAGAAEAAAAVANb/AAAIAAAAAAAVANX/AAAGAAEAAAAVANT/AAAHAAAAAAAVANP/AAAIAAAAAAAVANL/AAAIAAIAAAAVANH/AAAIAAAAAAAVAND/AAAGAAEAAAAVAM//AAAGAAAAAAAVAM7/AAAIAAAAAAAVAM3/AAAIAAEAAAAVAMz/AAAGAAEAAAAVAMv/AAAGAAAAAAAVAMr/AAAJAAIAAAAWAMr/AAAIAAAAAAAWAMv/AAAIAAIAAAAWAMz/AAAHAAAAAAAWAM3/AAAGAAAAAAAWAM7/AAAIAAEAAAAWAM//AAAIAAAAAAAWAND/AAAIAAAAAAAWANH/AAAJAAEAAAAWANL/AAAJAAEAAAAWANP/AAAHAAAAAAAWANT/AAAIAAIAAAAWANX/AAAGAAIAAAAWANb/AAAGAAEAAAAWANf/AAAIAAIAAAAWANj/AAAGAAAAAAAWANn/AAAHAAEAAAAWANr/AAAJAAIAAAAWANv/AAAIAAAAAAAWANz/AAAHAAIAAAAXANz/AAAHAAIAAAAXANv/AAAHAAEAAAAXANr/AAAHAAAAAAAXANn/AAAJAAAAAAAXANj/AAAIAAEAAAAXANf/AAAIAAEAAAAXANb/AAAJAAIAAAAXANX/AAAHAAIAAAAXANT/AAAHAAEAAAAXANP/AAAIAAAAAAAXANL/AAAJAAEAAAAXANH/AAAHAAAAAAAXAND/AAAIAAEAAAAXAM//AAAHAAEAAAAXAM7/AAAGAAIAAAAXAM3/AAAIAAAAAAAXAMz/AAAHAAIAAAAXAMv/AAAJAAAAAAAXAMr/AAAHAAIAAAAYAMr/AAAGAAEAAAAYAMv/AAAIAAAAAAAYAMz/AAAHAAEAAAAYAM3/AAAGAAEAAAAYAM7/AAAGAAEAAAAYAM//AAAGAAIAAAAYAND/AAAJAAAAAAAYANH/AAAIAAIAAAAYANL/AAAIAAAAAAAYANP/AAAGAAIAAAAYANT/AAAJAAEAAAAYANX/AAAGAAEAAAAYANb/AAAJAAIAAAAYANf/AAAJAAIAAAAYANj/AAAIAAEAAAAYANn/AAAJAAEAAAAYANr/AAAJAAIAAAAYANv/AAAJAAEAAAAYANz/AAAGAAIAAAAZANz/AAAIAAIAAAAZANv/AAAIAAIAAAAZANr/AAAIAAIAAAAZANn/AAAJAAAAAAAZANj/AAAHAAIAAAAZANf/AAAIAAIAAAAZANb/AAAIAAIAAAAZANX/AAAJAAAAAAAZANT/AAAIAAEAAAAZANP/AAAHAAIAAAAZANL/AAAGAAIAAAAZANH/AAAHAAIAAAAZAND/AAAHAAIAAAAZAM//AAAJAAAAAAAZAM7/AAAJAAAAAAAZAM3/AAAHAAIAAAAZAMz/AAAIAAAAAAAZAMv/AAAGAAAAAAAZAMr/AAAHAAAAAAAaAMr/AAAIAAIAAAAaAMv/AAAJAAEAAAAaAMz/AAAIAAIAAAAaAM3/AAAHAAAAAAAaAM7/AAAJAAEAAAAaAM//AAAHAAIAAAAaAND/AAAHAAAAAAAaANH/AAAIAAAAAAAaANL/AAAJAAAAAAAaANP/AAAHAAIAAAAaANT/AAAIAAEAAAAaANX/AAAJAAAAAAAaANb/AAAHAAAAAAAaANf/AAAJAAAAAAAaANj/AAAJAAAAAAAaANn/AAAGAAEAAAAaANr/AAAGAAIAAAAaANv/AAAJAAAAAAAaANz/AAAJAAEAAAAbANz/AAAJAAIAAAAbANv/AAAJAAEAAAAbANr/AAAGAAAAAAAbANn/AAAIAAIAAAAbANj/AAAHAAAAAAAbANf/AAAJAAIAAAAbANb/AAAIAAEAAAAbANX/AAAIAAAAAAAbANT/AAAHAAEAAAAbANP/AAAJAAIAAAAbANL/AAAJAAAAAAAbANH/AAAIAAIAAAAbAND/AAAHAAAAAAAbAM//AAAGAAEAAAAbAM7/AAAJAAEAAAAbAM3/AAAIAAEAAAAbAMz/AAAIAAEAAAAbAMv/AAAIAAEAAAAbAMr/AAAIAAIAAAAcAMr/AAAJAAEAAAAcAMv/AAAJAAEAAAAcAMz/AAAIAAAAAAAcAM3/AAAIAAAAAAAcAM7/AAAIAAAAAAAcAM//AAAHAAAAAAAcAND/AAAJAAAAAAAcANH/AAAGAAIAAAAcANL/AAAIAAEAAAAcANP/AAAIAAEAAAAcANT/AAAHAAEAAAAcANX/AAAGAAEAAAAcANb/AAAGAAAAAAAcANf/AAAHAAAAAAAcANj/AAAHAAAAAAAcANn/AAAGAAIAAAAcANr/AAAIAAEAAAAcANv/AAAHAAIAAAAcANz/AAAHAAAAAAAdANz/AAAJAAEAAAAdANv/AAAHAAIAAAAdANr/AAAIAAIAAAAdANn/AAAIAAIAAAAdANj/AAAIAAAAAAAdANf/AAAGAAAAAAAdANb/AAAHAAAAAAAdANX/AAAIAAIAAAAeANX/AAAGAAEAAAAeANT/AAAGAAAAAAAeANP/AAAHAAAAAAAeANL/AAAIAAEAAAAeANH/AAAIAAIAAAAeAND/AAAIAAIAAAAeAM//AAAIAAAAAAAeAM7/AAAHAAAAAAAeAM3/AAAGAAEAAAAeAMz/AAAJAAAAAAAeAMv/AAAHAAEAAAAeAMr/AAAHAAEAAAAeAMn/AAAIAAIAAAAfAMn/AAAHAAEAAAAfAMr/AAAJAAAAAAAfAMv/AAAGAAIAAAAfAMz/AAAGAAIAAAAfAM3/AAAJAAEAAAAfAM7/AAAIAAAAAAAfAM//AAAHAAEAAAAfAND/AAAJAAEAAAAfANH/AAAHAAAAAAAfANL/AAAHAAEAAAAfANP/AAAHAAAAAAAfANT/AAAGAAEAAAAfANX/AAAJAAAAAAAfANb/AAAIAAAAAAAeANb/AAAJAAAAAAAeANf/AAAIAAEAAAAeANj/AAAGAAAAAAAeANn/AAAGAAAAAAAeANr/AAAHAAEAAAAeANv/AAAJAAEAAAAeANz/AAAHAAEAAAAfANz/AAAHAAAAAAAfANv/AAAJAAEAAAAfANr/AAAHAAAAAAAfANn/AAAIAAIAAAAfANj/AAAHAAEAAAAfANf/AAAIAAAAAAAgANf/AAAHAAIAAAAgANb/AAAIAAIAAAAgANX/AAAHAAIAAAAgANT/AAAIAAEAAAAgANP/AAAJAAIAAAAgANL/AAAHAAAAAAAgANH/AAAIAAEAAAAgAND/AAAGAAAAAAAgAM//AAAJAAAAAAAgAM7/AAAIAAAAAAAgAM3/AAAHAAIAAAAgAMz/AAAHAAIAAAAgAMv/AAAHAAEAAAAgAMr/AAAGAAIAAAAgAMn/AAAHAAAAAAAhAMn/AAAHAAIAAAAhAMr/AAAGAAEAAAAhAMv/AAAIAAAAAAAhAMz/AAAGAAAAAAAhAM3/AAAIAAAAAAAhAM7/AAAIAAIAAAAhAM//AAAJAAIAAAAhAND/AAAJAAEAAAAhANH/AAAGAAEAAAAhANL/AAAJAAEAAAAhANP/AAAGAAAAAAAhANT/AAAJAAAAAAAhANX/AAAIAAEAAAAhANb/AAAHAAAAAAAhANf/AAAHAAEAAAAhANj/AAAGAAIAAAAgANj/AAAIAAIAAAAgANn/AAAJAAEAAAAgANr/AAAHAAEAAAAgANv/AAAHAAAAAAAgANz/AAAJAAIAAAAhANz/AAAIAAAAAAAhANv/AAAJAAIAAAAhANr/AAAIAAEAAAAhANn/AAAJAAIAAAAiANn/AAAGAAAAAAAiANj/AAAHAAIAAAAiANf/AAAHAAIAAAAiANb/AAAIAAEAAAAiANX/AAAJAAAAAAAiANT/AAAIAAEAAAAiANP/AAAJAAIAAAAiANL/AAAJAAIAAAAiANH/AAAJAAAAAAAiAND/AAAJAAAAAAAiAM//AAAHAAIAAAAiAM7/AAAHAAEAAAAiAM3/AAAHAAAAAAAiAMz/AAAGAAEAAAAiAMv/AAAHAAAAAAAiAMr/AAAIAAEAAAAiAMn/AAAHAAIAAAAjAMn/AAAIAAAAAAAjAMr/AAAGAAAAAAAjAMv/AAAHAAIAAAAjAMz/AAAJAAIAAAAjAM3/AAAIAAIAAAAjAM7/AAAIAAEAAAAjAM//AAAIAAIAAAAjAND/AAAJAAIAAAAjANH/AAAGAAAAAAAjANL/AAAJAAEAAAAjANP/AAAHAAAAAAAjANT/AAAIAAEAAAAjANX/AAAHAAAAAAAjANb/AAAHAAIAAAAjANf/AAAJAAIAAAAjANj/AAAJAAEAAAAjANn/AAAIAAIAAAAjANr/AAAIAAEAAAAiANr/AAAJAAIAAAAiANv/AAAJAAEAAAAiANz/AAAJAAAAAAAjANz/AAAIAAEAAAAjANv/AAAGAAAAAAAkANv/AAAIAAEAAAAkANr/AAAHAAEAAAAkANn/AAAHAAIAAAAkANj/AAAJAAAAAAAkANf/AAAIAAEAAAAkANb/AAAJAAEAAAAkANX/AAAIAAIAAAAkANT/AAAJAAEAAAAkANP/AAAIAAEAAAAkANL/AAAIAAEAAAAkANH/AAAJAAEAAAAkAND/AAAHAAEAAAAkAM//AAAHAAAAAAAkAM7/AAAIAAAAAAAkAM3/AAAHAAAAAAAkAMz/AAAJAAIAAAAkAMv/AAAGAAEAAAAkAMr/AAAGAAAAAAAkAMn/AAAJAAIAAAAlAMn/AAAJAAIAAAAlAMr/AAAJAAAAAAAlAMv/AAAHAAIAAAAlAMz/AAAIAAEAAAAlAM3/AAAIAAEAAAAlAM7/AAAGAAIAAAAlAM//AAAIAAAAAAAlAND/AAAJAAIAAAAlANH/AAAIAAIAAAAlANL/AAAIAAIAAAAlANP/AAAIAAAAAAAlANT/AAAIAAEAAAAlANX/AAAHAAIAAAAlANb/AAAIAAAAAAAlANf/AAAHAAEAAAAlANj/AAAIAAIAAAAlANn/AAAJAAIAAAAlANr/AAAIAAIAAAAlANv/AAAIAAEAAAAlANz/AAAHAAAAAAAkANz/AAAHAAEAAAAmANz/AAAIAAIAAAAmANv/AAAJAAAAAAAmANr/AAAHAAIAAAAmANn/AAAIAAEAAAAmANj/AAAGAAEAAAAmANf/AAAHAAEAAAAmANb/AAAGAAAAAAAmANX/AAAIAAAAAAAmANT/AAAJAAIAAAAmANP/AAAJAAEAAAAmANL/AAAHAAAAAAAmANH/AAAHAAEAAAAmAND/AAAIAAIAAAAmAM//AAAHAAIAAAAmAM7/AAAJAAEAAAAmAM3/AAAGAAEAAAAmAMz/AAAHAAIAAAAmAMv/AAAJAAIAAAAmAMr/AAAGAAIAAAAmAMn/AAAJAAAAAAAnAMn/AAAHAAEAAAAnAMr/AAAIAAIAAAAnAMv/AAAIAAAAAAAnAMz/AAAHAAEAAAAnAM3/AAAIAAIAAAAnAM7/AAAJAAEAAAAnAM//AAAJAAAAAAAnAND/AAAGAAIAAAAnANH/AAAGAAAAAAAnANL/AAAGAAIAAAAnANP/AAAIAAIAAAAnANT/AAAHAAEAAAAnANX/AAAHAAEAAAAnANb/AAAIAAIAAAAnANf/AAAIAAAAAAAnANj/AAAJAAAAAAAnANn/AAAJAAAAAAAnANr/AAAJAAEAAAAnANv/AAAGAAAAAAAnANz/AAAHAAIAAAAoANz/AAAGAAEAAAAoANv/AAAIAAAAAAAoANr/AAAJAAAAAAAoANn/AAAJAAIAAAAoANj/AAAIAAAAAAAoANf/AAAHAAAAAAAoANb/AAAHAAEAAAAoANX/AAAJAAIAAAAoANT/AAAGAAEAAAAoANP/AAAGAAAAAAAoANL/AAAGAAIAAAAoANH/AAAHAAAAAAAoAND/AAAIAAAAAAAoAM//AAAIAAEAAAAoAM7/AAAHAAEAAAAoAM3/AAAGAAAAAAAoAMz/AAAHAAEAAAAoAMv/AAAGAAIAAAAoAMr/AAAIAAEAAAAoAMn/AAAHAAIAAAApAMn/AAAHAAAAAAApAMr/AAAGAAAAAAApAMv/AAAHAAAAAAApAMz/AAAJAAIAAAApAM3/AAAHAAAAAAApAM7/AAAHAAAAAAApAM//AAAHAAAAAAApAND/AAAJAAIAAAApANH/AAAIAAEAAAApANL/AAAJAAAAAAApANP/AAAHAAEAAAApANT/AAAIAAIAAAApANX/AAAIAAIAAAApANb/AAAIAAAAAAApANf/AAAGAAAAAAApANj/AAAHAAEAAAApANn/AAAGAAIAAAApANr/AAAHAAAAAAApANv/AAAJAAEAAAApANz/AAAGAAEAAAAqANz/AAAJAAEAAAAqANv/AAAGAAAAAAAqANr/AAAIAAEAAAAqANn/AAAGAAAAAAAqANj/AAAHAAAAAAAqANf/AAAHAAIAAAAqANb/AAAJAAEAAAAqANX/AAAHAAAAAAAqANT/AAAHAAEAAAAqANP/AAAGAAIAAAAqANL/AAAHAAEAAAAqANH/AAAIAAAAAAAqAND/AAAIAAEAAAAqAM//AAAJAAIAAAAqAM7/AAAIAAEAAAAqAM3/AAAHAAEAAAAqAMz/AAAIAAAAAAAqAMv/AAAHAAIAAAAqAMr/AAAGAAEAAAAqAMn/AAAHAAAAAAArAMn/AAAHAAIAAAArAMr/AAAGAAAAAAArAMv/AAAGAAAAAAArAMz/AAAHAAIAAAArAM3/AAAHAAEAAAArAM7/AAAGAAAAAAArAM//AAAHAAEAAAArAND/AAAJAAAAAAArANH/AAAJAAIAAAArANL/AAAGAAAAAAArANP/AAAIAAAAAAArANT/AAAJAAAAAAArANX/AAAIAAIAAAArANb/AAAGAAAAAAArANf/AAAJAAAAAAArANj/AAAJAAEAAAArANn/AAAHAAEAAAArANr/AAAIAAAAAAArANv/AAAJAAAAAAArANz/AAAIAAAAAAAsANz/AAAIAAAAAAAsANv/AAAJAAEAAAAsANr/AAAGAAAAAAAsANn/AAAHAAIAAAAsANj/AAAIAAAAAAAsANf/AAAJAAAAAAAsANb/AAAGAAIAAAAsANX/AAAIAAIAAAAsANT/AAAJAAAAAAAsANP/AAAJAAAAAAAsANL/AAAGAAEAAAAsANH/AAAGAAIAAAAsAND/AAAIAAIAAAAsAM//AAAIAAAAAAAsAM7/AAAHAAEAAAAsAM3/AAAHAAEAAAAsAMz/AAAIAAIAAAAsAMv/AAAHAAAAAAAsAMr/AAAIAAAAAAAsAMn/AAAIAAAAAAAtAMn/AAAHAAAAAAAtAMr/AAAJAAIAAAAtAMv/AAAIAAIAAAAtAMz/AAAJAAIAAAAtAM3/AAAGAAEAAAAtAM7/AAAGAAAAAAAtAM//AAAIAAEAAAAtAND/AAAJAAEAAAAtANH/AAAHAAAAAAAtANL/AAAGAAEAAAAtANP/AAAIAAAAAAAtANT/AAAIAAEAAAAtANX/AAAHAAEAAAAtANb/AAAGAAAAAAAtANf/AAAJAAEAAAAtANj/AAAJAAAAAAAtANn/AAAJAAEAAAAtANr/AAAJAAEAAAAtANv/AAAJAAAAAAAtANz/AAAHAAAAAAAuANz/AAAGAAEAAAAuANv/AAAGAAEAAAAuANr/AAAGAAAAAAAuANn/AAAIAAIAAAAuANj/AAAHAAAAAAAuANf/AAAJAAAAAAAuANb/AAAJAAAAAAAuANX/AAAGAAIAAAAuANT/AAAJAAEAAAAuANP/AAAGAAAAAAAuANL/AAAGAAIAAAAuANH/AAAJAAAAAAAuAND/AAAHAAAAAAAuAM//AAAHAAAAAAAuAM7/AAAGAAEAAAAuAM3/AAAIAAEAAAAuAMz/AAAHAAIAAAAuAMv/AAAGAAEAAAAuAMr/AAAHAAAAAAAuAMn/AAAJAAAAAAAvAMn/AAAIAAAAAAAvAMr/AAAHAAEAAAAvAMv/AAAJAAIAAAAvAMz/AAAGAAAAAAAvAM3/AAAJAAEAAAAvAM7/AAAIAAIAAAAvAM//AAAIAAEAAAAvAND/AAAGAAAAAAAvANH/AAAHAAIAAAAvANL/AAAJAAEAAAAvANP/AAAHAAIAAAAvANT/AAAIAAEAAAAvANX/AAAIAAAAAAAvANb/AAAIAAAAAAAvANf/AAAGAAIAAAAvANj/AAAGAAAAAAAvANn/AAAHAAAAAAAvANr/AAAGAAIAAAAvANv/AAAIAAEAAAAvANz/AAAJAAEAAAA=")
tile_set = ExtResource("1_p7vvt")

[node name="PlayerSpawnLoc" type="Node2D" parent="."]
position = Vector2(64, 64)

[node name="MonsterSpawnLoc" type="Node2D" parent="."]
position = Vector2(504, -840)

[node name="LevelTriggers" type="Node2D" parent="."]

[node name="MoveTutorialCompleteTrigger" type="Area2D" parent="LevelTriggers"]
position = Vector2(424, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTriggers/MoveTutorialCompleteTrigger"]
shape = SubResource("SegmentShape2D_vqqba")

[node name="DashTutorialStartTrigger" type="Area2D" parent="LevelTriggers"]
position = Vector2(496, -48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTriggers/DashTutorialStartTrigger"]
shape = SubResource("RectangleShape2D_65mjx")

[node name="SpellTutorialStartTrigger" type="Area2D" parent="LevelTriggers"]
position = Vector2(496, -576)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTriggers/SpellTutorialStartTrigger"]
shape = SubResource("RectangleShape2D_vqqba")

[node name="MurderTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TutorialHUD" parent="." instance=ExtResource("3_p0mxm")]
visible = false

[connection signal="body_entered" from="LevelTriggers/MoveTutorialCompleteTrigger" to="." method="_on_move_tutorial_complete_trigger_body_entered"]
[connection signal="body_entered" from="LevelTriggers/DashTutorialStartTrigger" to="." method="_on_dash_tutorial_start_trigger_body_entered"]
[connection signal="body_entered" from="LevelTriggers/SpellTutorialStartTrigger" to="." method="_on_spell_tutorial_start_trigger_body_entered"]
[connection signal="timeout" from="MurderTimer" to="." method="_on_murder_timer_timeout"]
